# magrover_ros

./: .gitignore  launch.py
bt_serial_test/: Cargo.toml
bt_serial_test/src/: main.rs
docs/: Electronics Architecture.md  Power Architecture.md  ROS Nodes.md  Serial Communication Specification.md
install/: local_setup.sh  setup.sh
src/battery_imu_mon/: package.xml  setup.cfg  setup.py
src/battery_imu_mon/battery_imu_mon/: batteryimu.py
src/battery_imu_mon/scripts/: battery
src/bt_receiver/: launch.py
src/bt_receiver/src/: messages.rs
src/bt_receiver_old/: Cargo.toml  package.xml
src/bt_receiver_old/launch/: launch.py
src/bt_receiver_old/src/: main.rs
src/data_logger/: package.xml  setup.py
src/data_logger/data_logger/: data_logger.py
src/mag_array/mag_array/: Cargo.toml  package.xml
src/mag_array/mag_array/launch/: launch.py
src/mag_array/mag_array/lib/pni_rm3100/: Cargo.toml
src/mag_array/mag_array/lib/pni_rm3100/src/: lib.rs  register.rs
src/mag_array/mag_array/lib/shared-bus-0.2.4/: .cargo_vcs_info.json  Cargo.toml
src/mag_array/mag_array/lib/shared-bus-0.2.4/src/: macros.rs  proxies.rs
src/mag_array/mag_array/src/: chip_select.rs  main.rs
src/mag_array/mag_array_interfaces/: CMakeLists.txt  package.xml
src/mag_array/mag_array_interfaces/msg/: MagArrayFrame.msg
src/motor_control/: Cargo.toml  launch.py  package.xml
src/motor_control/lib/lewansoul_bus_servo/: Cargo.toml
src/motor_control/lib/lewansoul_bus_servo/src/: commands.rs  lib.rs
src/motor_control/src/: main.rs
src/serial_receiver/: launch.py  package.xml  setup.cfg  setup.py
src/serial_receiver/serial_receiver/: messages_pb2.py  serial_receiver.py  transceiver_base.py
src/ws_receiver/: package.xml  setup.cfg  setup.py
src/ws_receiver/ws_receiver/: messages_pb2.py  ws_receiver.py
