<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bt_receiver</name>
    <version>0.1.0</version>
    <description>MagRover bluetooth receiver node.</description>
    <maintainer email="samuellihn@gmail.com">Samuel Lihn</maintainer>
    <license>MIT</license>

    <build_depend>rclrs</build_depend>
    <build_depend>rosidl_runtime_rs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <exec_depend>rclrs</exec_depend>
    <exec_depend>rosidl_runtime_rs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <export>
        <build_type>ament_cargo</build_type>
    </export>
</package>