[package]
name = "motor_control"
version = "0.1.0"
authors = ["Samuel Lihn <samuellihn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lewansoul_bus_servo = {"path" = "./lib/lewansoul_bus_servo"}
anyhow = "1.0.58"

[dependencies.rclrs]
version = "*"

[dependencies.rosidl_runtime_rs]
version = "*"

[dependencies.geometry_msgs]
version = "*"

[dependencies.std_msgs]
version = "*"

#[package.metadata.ros]
#install_to_share = ["launch"]